# subdivided_pill

./: .clang-format  .gitignore  CMakeLists.txt  subdivided_pill.h
docs/: README.md
tools/: CMakeLists.txt  gensvg.c
